<resources>
    <string name="app_name">OrderApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close nagivation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_view_orders">View Orders</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_food_detail">Food Detail</string>
    <string name="menu_food_list">Food List</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="menu_category">Categories</string>
    <string name="size">Size</string>
    <string name="add_on">Add on</string>
    <string name="sign_out">Sign_out</string>
    <string name="nav_cart">Cart</string>
    <string name="action_clear_cart">Clear Cart</string>
    <string name="update_info">Update Info</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"> AIzaSyDFWa-0NcyAk0VaZCRc2v4IcctBcr8g5R4</string>
    <string name="title_activity_tracking_order">Map</string>
    <string name="menu_news">News</string>
    <string name="menu_restaurant">Restaurants</string>

</resources>