<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tofukma.orderapp.View.HomeUI.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.tofukma.orderapp.View.CategoryUI.MenuFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_food_list"
        android:name="com.tofukma.orderapp.View.FoodListUI.FoodListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_food_list" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.tofukma.orderapp.View.CartUI.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/frament_cart" />

    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.tofukma.orderapp.View.FoodDetailUI.FoodDetailFragment"
        android:label="@string/menu_food_detail"
        tools:layout="@layout/fragment_food_detail" />

    <fragment
        android:id="@+id/nav_view_order"
        android:name="com.tofukma.orderapp.View.FoodListUI.FoodListFragment"
        android:label="@string/menu_view_orders"
        tools:layout="@layout/fragment_view_orders" />
</navigation>